fix overlapped buttons (bug 912056)

--- a/hearth/media/css/forms.styl
+++ b/hearth/media/css/forms.styl
@@ -185,7 +185,7 @@ textarea {
             position: absolute;
             top: -90px;
             right: -10px;
-            z-index: 20;
+            z-index: 19;
 
             p {
                 float: left;
